<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:fillViewport="true"
    tools:context="com.kresloeffects.lesson_07.SignUp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header_text_size"
                android:textColor="@color/colorSignUp"
                android:text="@string/registration"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/login"
                android:id="@+id/edit_text_log_in"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/password"
                android:id="@id/edit_text_password"
                android:inputType="textPassword"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/repeat_password"
                android:id="@+id/edit_text_repeat_password"
                android:inputType="textPassword"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:singleLine="true"
                android:hint="@string/firs_name"
                android:id="@+id/edit_text_first_name"
                android:inputType="textPersonName" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/last_name"
                android:id="@+id/edit_text_last_name"
                android:inputType="textPersonName"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:id="@+id/radio_group">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/man"
                    android:id="@+id/man"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/woman"
                    android:id="@+id/woman"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/other"
                    android:checked="true"
                    android:id="@+id/other"/>
            </RadioGroup>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:singleLine="false"
                android:gravity="top"
                android:hint="@string/additional_information"
                android:id="@+id/edit_text_more_info"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms"
                android:id="@+id/check_box_accept"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_padding"
                android:layout_weight="0.5"></View>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/button_sign_up"
                android:enabled="false"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@id/button_back"/>
        </LinearLayout>

</ScrollView>
