<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/margin"
    android:fillViewport="true"
    tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_padding"
                android:layout_weight="0.5"></View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_hader_text"
                android:textSize="@dimen/header_text_size"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:id="@+id/sign_in"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/sign_up"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_padding"
                android:layout_weight="0.5"></View>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:id="@+id/about"/>
        </LinearLayout>
</ScrollView>
